Enforce vertical scroll to prevent content shifting

--- a/src/assets/css/clean-blog.css
+++ b/src/assets/css/clean-blog.css
@@ -5,6 +5,9 @@
  */
 @import 'https://fonts.googleapis.com/css?family=Roboto:300,400,500';
 
+html {
+  overflow-y: scroll;
+}
 body {
   font-family: "Roboto", "Helvetica", "Arial", sans-serif;
   font-size: 16px;
